--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -74,11 +74,8 @@ font-size: 85px;
 /* main section */
 
 main {
-    position: absolute;
-    width: 1140px;
-    height: 550px;
-    left: 180px;
-    right: 180px;
+   max-width: 1140px;
+   margin: 0 auto;
 
 }
 
